2000-11-01 John R. Jackson  <jrj@purdue.edu>

	* common-src/security.c (bsd_security_ok): Same fix for amwait_t !=
	int as applied a while back to changer.c.  Compliments of John E.
	Hein <jhein@timing.com>.

2000-10-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/selfcheck.c (check_disk): Write an appropriate
	message if the disk name start with '//' and the program is DUMP
	or SAMBA is not compiled in.

2000-10-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (continue_dumps): set estimate to more than
	what is already use instead of setting no_hold=1 when a disk
	don't fit on holding disk.

2000-10-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: add '&' when calling &usage()
	or &dump_size().

2000-10-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	reported by The Hermit Hacker <scrappy@hub.org>

	* changer-src/chg-chio.pl.in: remove unused $libexecdir.

2000-10-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	reported by The Hermit Hacker <scrappy@hub.org>

	* changer-src/chg-chio.pl.in: remove comma after LOG,
	typo: r should be 0.

2000-10-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/INDEXING: doc updated.

2000-10-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/scsi-defs.h: prototype SCSI_Inquiry, PrintInquiry, 
	DecodeSCSI, ChangerReplay, BarCode and MapBarCode.
	* changer-src/scsi-linux.c: fix compiler warning.
	* changer-src/scsi-changer-driver.c: fix compiler warning.

2000-10-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/chg-scsi.c: remove rcsid.
	* changer-src/scsi-aix.c: remove rcsid, add amanda Copyright.
	* changer-src/scsi-bsd.c: remove rcsid, add amanda Copyright.
	* changer-src/scsi-changer-driver.c: remove rcsid, add amanda Copyright.
	* changer-src/scsi-defs.h: add amanda Copyright.
	* changer-src/scsi-hpux.c: remove rcsid.